--- a/package.json
+++ b/package.json
@@ -9,23 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^5.0.0",
     "@next-auth/prisma-adapter": "^1.0.6",
+    "@paralleldrive/cuid2": "^2.2.1",
+    "@prisma/client": "^5.0.0",
+    "@tanstack/react-query": "^4.32.0",
     "@types/node": "20.4.5",
     "@types/react": "18.2.16",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "cheerio": "^1.0.0-rc.12",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "ioredis": "^5.3.2",
     "next": "13.4.12",
     "next-auth": "^4.22.3",
+    "npmlog": "^7.0.1",
     "postcss": "8.4.27",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.10.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@types/cheerio": "^0.22.31",
+    "@types/npmlog": "^4.1.4",
     "prisma": "^5.0.0"
   }
 }
