--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
 DATABASE_URL=
-REDIS_URI=
+REDIS_URI_JOBS=
+REDIS_URI_CANCELLATION=
+REDIS_URI_FINISH=
+
+NEXTAUTH_SECRET=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GITHUB_CLIENT_ID=
