--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "@next-auth/prisma-adapter": "^1.0.6",
     "@paralleldrive/cuid2": "^2.2.1",
     "@prisma/client": "^5.0.0",
