--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-icons": "^4.10.1",
     "server-only": "^0.0.1",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.31",
